add some beginning css, connect stylesheet to html file

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Hangman</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 class='title'>Hangman</h1>
-        <p class="instructions">Please select a category below to begin the game!</p>
-        <div class="cat-container">
+        <div id="body-container">
+            <h1 class='title'>Hangman</h1>
+            <p class="instructions">Please select a category below to begin the game!</p>
+            <div class="cat-container">
+        </div>
         </div>
     </body>
 </html>
