--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>Hangman</title>
         <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="categoryAdaptor.js"></script>
+        <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
         <div id="body-container">
