--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Hangman</title>
         <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="categoryAdaptor.js"></script>
+        <script type="text/javascript" src="category.js"></script>
         <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
