--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Hangman</title>
         <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="wordAdaptor.js"></script>
         <script type="text/javascript" src="categoryAdaptor.js"></script>
         <script type="text/javascript" src="category.js"></script>
         <script type="text/javascript" src="index.js"></script>
