add gamePlay js class with constructor, add div to html file to hold the game board, add new GamePlay to category's selectCategory function

--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
         <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="wordAdaptor.js"></script>
         <script type="text/javascript" src="categoryAdaptor.js"></script>
+        <script type="text/javascript" src="gamePlay.js"></script>
         <script type="text/javascript" src="category.js"></script>
         <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
         <div id="body-container">
             <h1 class='title'>Hangman</h1>
+            <div id="game-board">
+                
+            </div>
             <p class="instructions">Please select a category below to begin the game!</p>
             <div class="cat-container">
-        </div>
+            </div>
         </div>
     </body>
 </html>
