add word js class file with constructor and selectWord functions, add file to html file, update what to do with the obj returned from wordAdaptor fetch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="wordAdaptor.js"></script>
         <script type="text/javascript" src="categoryAdaptor.js"></script>
+        <script type="text/javascript" src="word.js"></script>
         <script type="text/javascript" src="gamePlay.js"></script>
         <script type="text/javascript" src="category.js"></script>
         <script type="text/javascript" src="index.js"></script>
