add btn to create new category, add renderform function, add event listener, add a hidden css class

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <p class="instructions">Please select a category below to begin the game!</p>
             <div class="cat-container">
             </div>
+            <button id='new-category-btn'>Add New Category</button>
         </div>
     </body>
 </html>
