add add new word button, update css to match add new category btn

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p class="instructions">Please select a category below to begin the game!</p>
             <div class="cat-container">
             </div>
-            <button id='new-category-btn'>Add New Category</button>
+            <button id='new-category-btn' class="add-new">Add New Category</button>  <button id='new-word-btn' class="add-new">Add New Word</button>
         </div>
     </body>
 </html>
