--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
         <meta charset="utf-8">
         <title>Hangman</title>
         <link rel="stylesheet" href="style.css">
-        <script type="text/javascript" src="wordAdaptor.js"></script>
-        <script type="text/javascript" src="categoryAdaptor.js"></script>
-        <script type="text/javascript" src="word.js"></script>
-        <script type="text/javascript" src="gamePlay.js"></script>
-        <script type="text/javascript" src="category.js"></script>
-        <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
         <div id="body-container">
@@ -23,4 +17,11 @@
             <button id='new-category-btn' class="add-new">Add New Category</button>  <button id='new-word-btn' class="add-new">Add New Word</button>
         </div>
     </body>
+    <script type="text/javascript" src="wordAdaptor.js"></script>
+    <script type="text/javascript" src="categoryAdaptor.js"></script>
+    <script type="text/javascript" src="confetti.js"></script>
+    <script type="text/javascript" src="word.js"></script>
+    <script type="text/javascript" src="gamePlay.js"></script>
+    <script type="text/javascript" src="category.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </html>
